[package]
name = "solomka-clap-v3-utils"
version = "1.14.12"
description = "Solana utilities for the clap v3"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/pavlo-u/solomka-chain"
license = "Apache-2.0"
documentation = "https://docs.rs/solomka-clap-utils"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.1.5", features = ["cargo"] }
rpassword = "6.0"
solana-perf = { path = "../perf", version = "=1.14.12" }
solomka-remote-wallet = { path = "../remote-wallet", version = "=1.14.12", default-features = false }
solomka-sdk = { path = "../sdk", version = "=1.14.12" }
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"
uriparse = "0.6.4"
url = "2.2.2"

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "solomka_clap_v3_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
