[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solomka-cli-config"
description = "Blockchain, Rebuilt for Scale"
version = "1.14.20"
repository = "https://github.com/pavlo-u/solomka-chain"
license = "Apache-2.0"
documentation = "https://docs.rs/solomka-cli-config"

[dependencies]
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = "1.0.138"
serde_derive = "1.0.103"
serde_yaml = "0.8.26"
solomka-clap-utils = { path = "../clap-utils", version = "=1.14.20" }
solomka-sdk= { path = "../sdk", version = "=1.14.20" }
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.58"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
