[package]
name = "solana-watchtower"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/solana-watchtower"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
solana-clap-utils = { workspace = true }
sonoma-cli-config = { workspace = true }
sonoma-cli-output = { workspace = true }
solana-logger = { workspace = true }
solana-metrics = { workspace = true }
solana-notifier = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solomka-sdk = { workspace = true }
solana-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
